<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_green"
        android:orientation="vertical"
        tools:context="sandhya.prabhu.in.newstime.fragments.AboutFragment">

        <ImageView
            android:layout_width="@dimen/about_image_width"
            android:layout_height="@dimen/about_image_width"
            android:layout_gravity="center"
            android:layout_margin="@dimen/layout_margin"
            android:contentDescription="@string/sample_globe_image"
            android:src="@drawable/world_news" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_margin"
            android:gravity="center"
            android:text="@string/unlock_the_world_news"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_radius"
            android:gravity="center"
            android:text="@string/worlds_latest_news"
            android:textColor="@color/white"
            android:textSize="@dimen/layout_margin_t"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_margin"
            android:gravity="center"
            android:text="@string/universe_shattering"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_radius"
            android:gravity="center"
            android:text="@string/always_updated"
            android:textColor="@color/white"
            android:textSize="@dimen/layout_margin_t"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_margin"
            android:gravity="center"
            android:text="@string/very_often"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_radius"
            android:gravity="center"
            android:text="@string/country_wise_and_category_wise"
            android:textColor="@color/white"
            android:textSize="@dimen/layout_margin_t"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_margin"
            android:gravity="center"
            android:text="@string/various_categories"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_radius"
            android:gravity="center"
            android:text="@string/top_headlines"
            android:textColor="@color/white"
            android:textSize="@dimen/layout_margin_t"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_margin"
            android:gravity="center"
            android:text="@string/top_20_headlines"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>