<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/card_radius">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:elevation="@dimen/appBarElevation"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="sandhya.prabhu.in.newstime.activities.ArticleDetailActivity">

            <FrameLayout
                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/article_detail_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_image_height"
                    android:layout_marginTop="?actionBarSize"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/article_image"
                    android:scaleType="centerCrop"
                    android:transitionName="@string/shared_element_transition" />

                <com.like.LikeButton
                    android:id="@+id/heart_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right|end"
                    android:layout_marginEnd="@dimen/card_radius"
                    android:background="@drawable/like_button"
                    ads:icon_size="@dimen/layout_margin"
                    app:icon_type="heart"
                    android:contentDescription="@string/like_button"
                    tools:ignore="RtlHardcoded" />
            </FrameLayout>

            <TextView
                style="@style/headingTextStyle"
                android:text="@string/title" />

            <TextView
                android:id="@+id/article_detail_title"
                style="@style/subTextStyle"

                />

            <TextView
                style="@style/headingTextStyle"
                android:text="@string/author" />

            <TextView
                android:id="@+id/article_detail_author"
                style="@style/subTextStyle" />

            <TextView
                style="@style/headingTextStyle"
                android:text="@string/description" />

            <TextView
                android:id="@+id/article_detail_desc"
                style="@style/subTextStyle" />

            <TextView
                style="@style/headingTextStyle"
                android:text="@string/related_links" />

            <TextView
                android:id="@+id/article_detail_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_radius"
                android:autoLink="web" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/card_radius"
                ads:adSize="@string/banner"
                ads:adUnitId="@string/banner_ad_unit_id" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>