<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context="sandhya.prabhu.in.newstime.fragments.FeedbackFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_image_height"
        android:layout_margin="@dimen/card_radius"
        android:contentDescription="@string/feedback"
        android:src="@drawable/feedback" />

    <EditText
        android:id="@+id/userFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_radius"
        android:hint="@string/enter_your_feedback"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/layout_margin"
        android:background="@color/colorAccent"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        android:textStyle="bold" />

</LinearLayout>
