<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_radius"
        android:orientation="vertical"
        tools:context="sandhya.prabhu.in.newstime.activities.CountrySelectionActivity">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="@dimen/profile_pic_dp"
            android:layout_height="@dimen/profile_pic_dp"
            android:layout_gravity="center"
            android:contentDescription="@string/profile_image" />

        <TextView
            android:id="@+id/usernameDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_radius"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/layout_margin_t"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_radius"
            android:gravity="center"
            android:text="@string/welcome_to_news_time"
            android:textColor="@color/black"
            android:textSize="@dimen/welcome_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_radius"
            android:gravity="center"
            android:text="@string/check_out"
            android:textColor="@color/black"
            android:textSize="@dimen/welcome_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/countrySpinner"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/spinner_height"
                android:layout_margin="@dimen/card_radius"
                android:background="@color/green"
                android:entries="@array/countries" />

            <Button
                android:layout_width="@dimen/spinner_height"
                android:layout_height="@dimen/spinner_height"
                android:layout_margin="@dimen/card_radius"
                android:background="@drawable/ic_next"
                android:onClick="gotoCategories" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/set_notification_reminder"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/welcome_text_size" />

        <Switch
            android:id="@+id/toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_radius" />
    </LinearLayout>
</ScrollView>